...
        android:layout_height="wrap_content"
        android:layout_alignWithParentIfMissing="false"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/signinUserID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="username"
            android:ems="12"
            android:maxLength="30"
            android:inputType="textNoSuggestions"  />

        <EditText
            android:id="@+id/signinPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="password"
            android:ems="12"
            android:maxLength="30"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/buttonSignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_marginLeft="80dp"
            android:textColor="#0000ff"
            android:onClick="buttonSigninOnClick"
            android:text="@string/sign_in" />

        <Button
            android:id="@+id/buttonSignup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="80dp"
            android:layout_marginLeft="80dp"
            android:textColor="#0000ff"
            android:onClick="buttonSignupOnClick"
...
